# rust-spotify-discord-bot

./: Cargo.toml
migrations/: 20250504050108_create_threads_table.sql  20250504051046_create_user_messages_table.sql  20250504051056_create_agent_messages_table.sql
src/: infrastructure.rs  lib.rs  main.rs  model.rs
src/client/spotify/: v1.rs
src/client/spotify/api/: token.rs
src/client/spotify/v1/artists/: top_tracks.rs
src/client/spotify/v1/me/: following.rs
src/discord/: commands.rs  events.rs
src/discord/commands/: ping.rs  random_music.rs  ss.rs  thread.rs
src/discord/events/: messages.rs
src/infrastructure/: discord.rs  llm.rs  mcp.rs
src/infrastructure/database/: pool.rs
src/infrastructure/discord/: client.rs  framework.rs
src/infrastructure/llm/: agent.rs  client.rs  embedding.rs
src/infrastructure/mcp/: server.rs  toolset.rs
src/model/: agent_message.rs  thread.rs  user_message.rs
src/spotify/: access_token.rs  artist.rs
src/types/discord/: framework.rs
