[package]
name = "rust-spotify-discord-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
dotenvy = "0.15.7"
rand = "0.9.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
urlencoding = "2.1.3"
