[package]
name = "ss-discord-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
rig-core = "0.11.1"
anyhow = "1.0.98"
base64 = "0.22.1"
dotenvy = "0.15.7"
rand = "0.9.0"
reqwest = { version = "0.12.15", features = ["json"] }
rmcp = { version = "0.1.5", features = ["transport-child-process", "client"] }
schemars = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serenity = "0.12.4"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
toml = "0.8.20"
urlencoding = "2.1.3"
once_cell = "1.21.3"
